<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_foster"
                    android:textSize="18sp"
                    android:text="@string/foster_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/foster_what_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/foster_what_title"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foster_what_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/foster_what_text"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/foster_who_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:paddingTop="8dp"
                android:text="@string/foster_who_title"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foster_who_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/foster_who_text"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/foster_faq_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:paddingTop="8dp"
                android:text="@string/foster_faq_title"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foster_faq_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:freezesText="true"
                android:text="@string/foster_faq_q1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foster_faq_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/foster_faq_a1"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/foster_faq_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:freezesText="true"
                android:text="@string/foster_faq_q2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foster_faq_a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/foster_faq_a2"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/foster_faq_q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:freezesText="true"
                android:text="@string/foster_faq_q3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foster_faq_a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/foster_faq_a3"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/foster_faq_q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:freezesText="true"
                android:text="@string/foster_faq_q4"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foster_faq_a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/foster_faq_a4"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/foster_faq_q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:freezesText="true"
                android:text="@string/foster_faq_q5"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foster_faq_a5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/foster_faq_a5"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/foster_faq_q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:freezesText="true"
                android:text="@string/foster_faq_q6"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foster_faq_a6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/foster_faq_a6"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/foster_responsibilities_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:freezesText="true"
                android:text="@string/foster_responsibilities_title"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foster_responsibilities_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/foster_responsibilities_text"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>
